--- a/src/Styles/AboutPage/Form.module.css
+++ b/src/Styles/AboutPage/Form.module.css
@@ -4,18 +4,12 @@
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    padding: 3rem 1rem;
+    padding: 5rem 1rem;
   }
   
   .parent4 > div:nth-child(1) > img {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .parent4 > div:nth-child(1) > img {
     width: 16%;
-    margin: auto;
+    margin:0.5rem auto auto auto;
   }
   .parent4 > div:nth-child(1) > p {
     background: linear-gradient(178.18deg, #fd749b -13.56%, #281ac8 158.3%);
@@ -37,6 +31,7 @@
     width: 60%;
     text-align: center;
     margin: auto;
+    padding-bottom: 1rem;
   }
   .parent4 > div:nth-child(3) {
     display: flex;
