--- a/src/Styles/AboutPage/TeamsComp.module.css
+++ b/src/Styles/AboutPage/TeamsComp.module.css
@@ -14,8 +14,11 @@
 }
 
 .P1 > div:nth-child(1) > p {
-
+  
   padding-top: 4rem;
+}
+.P1 > div:nth-child(1) > img {
+  width: 50px;
 }
 .P1 > div:nth-child(2) {
   display: flex;
@@ -66,11 +69,7 @@
 }
 
 .CardP > div > div > p:nth-child(1) {
-  background: linear-gradient(
-    178.18deg,
-    #fd749b -13.56%,
-    #281ac8 158.3%
-  ) !important;
+  background: linear-gradient(178.18deg, #FD749B -13.56%, #281AC8 158.3%) !important;
   background-clip: text !important;
   -webkit-text-fill-color: transparent !important;
   font-family: 'Poppins';
@@ -141,7 +140,7 @@
   position: relative;
   z-index: 5;
   padding: 8rem 1rem 2rem 1rem;
-  gap: 4rem;
+  gap: 2rem;
 }
 
 @media (max-width: 1000px) {
@@ -152,21 +151,51 @@
   }
 }
 
-.P2 > div * {
-  background: linear-gradient(
-    178.18deg,
-    #fd749b -13.56%,
-    #281ac8 158.3%
-  ) !important;
+.P2 > div > img {
+  width: 50px;
+  margin: auto;
+
+}
+.P2 > div > p {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 65px;
+  background: linear-gradient(178.18deg, #FD749B -13.56%, #281AC8 158.3%) !important;
   background-clip: text !important;
   -webkit-text-fill-color: transparent !important;
-  font-family: "Poppins";
-  font-size: 28px;
-  font-weight: 700;
-  line-height: 30px;
-  letter-spacing: 0px;
-  text-align: right;
-  margin: auto;
+}
+
+.CardInTeam {
+  position: relative;
+}
+
+
+@media (min-width: 1150px) {
+  .CardInTeam img{
+    width: 299px;
+    height: 285px;
+    transform: scale(2);
+    position: relative;
+    top: 4rem;
+    border-radius: 15px;
+  }
+}
+@media (max-width: 1150px) {
+  .CardInTeam img{
+    position: relative;
+    width: 25%;
+    height: 20%;
+    transform: scale(2);
+    top: 4rem;
+    border-radius: 15px;
+  }
+}
+@media (max-width: 575px) {
+  .CardInTeam img{
+    top: 1rem;
+  }
 }
 .P2 > p:nth-child(2) {
   font-family: "Poppins";
@@ -186,27 +215,70 @@
 
 
 @media (max-width: 500px) {
-  .P2 > div * {
-    font-size: 24px !important;
-    font-weight: 400;
-    line-height: 45px;
-  }
   .P2 > p:nth-child(2) {
     width: 95%;
-  }
-  .P2 > div * {
-    font-size: 18px;
   }
   .P2 > p:nth-child(2) {
     font-size: 14px;
   }
 }
 
+
 .CardInTeam {
   display: flex !important;
-  padding: 3rem 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding-top: 2rem;
 }
-
+@media (min-width: 1000px) {
+.CardInTeam > div:nth-child(1) , .CardInTeam > div:nth-child(5) {
+  width: 299px;
+  height: 185px;
+  background: #C4C4C4;
+  border-radius: 15px;
+  z-index: 1;
+}
+}
+.CardInTeam > div:nth-child(1) {
+  position: relative;
+  left: 139px;
+}
+.CardInTeam > div:nth-child(5) {
+  position: relative;
+  right: 139px;
+}
+.CardInTeam > div:nth-child(2) {
+  position: relative;
+  left: 40px;
+}
+.CardInTeam > div:nth-child(4) {
+  position: relative;
+  right: 40px;
+}
+.CardInTeam > div:nth-child(2) , .CardInTeam > div:nth-child(4) {
+  width: 299px;
+  height: 233px;
+  background: #C4C4C4;
+  border-radius: 15px;
+  z-index: 2;
+}
+.CardInTeam > div:nth-child(3) {
+  width: 299px;
+  height: 285px;
+  background: linear-gradient(178.18deg, #FD749B -13.56%, #281AC8 158.3%);
+opacity: 0.4;
+border-radius: 15px;
+z-index: 3;
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+justify-content: flex-end;
+padding-bottom: 2rem;
+padding-left: 2rem;
+}
+/* 
 .CardInTeam > div {
   flex: 1;
   width: 17vw !important;
@@ -215,12 +287,12 @@
   border-radius: 14px;
   box-shadow: 0px 0px 1px white;
   position: relative;
-}
-.CardInTeam :nth-child(even) {
+} */
+/* .CardInTeam :nth-child(even) {
   transform: scale(1.2);
   z-index: 2;
-}
-.CardInTeam div:nth-child(3) {
+} */
+/* .CardInTeam div:nth-child(3) {
   transform: scale(1.4);
   background: linear-gradient(
     178.18deg,
@@ -229,7 +301,7 @@
   ) !important;
   z-index: 4;
   opacity: 0.7;
-}
+} */
 
 @media (max-width: 550px) {
   .CardInTeam {
