--- a/src/Styles/BlogContentPage/BlogContentP.module.css
+++ b/src/Styles/BlogContentPage/BlogContentP.module.css
@@ -1,161 +1,42 @@
 .Allparent {
+  width: 100%;
+  margin-top: 7rem;
+  position: relative;
+  /* background-image: url('../.././Images/BlogContent/BG\ \(1\).svg'); */
+  background-size: 100%;
+}
+.Allparent * {
+  font-family: "Poppins";
+}
+
+.parent {
+  padding: 16% 10%;
+}
+.Allparent img:nth-child(3) {
+  display: none;
+}
+
+@media (max-width: 500px) {
+  .Allparent {
+    margin-top: 0rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-image: url("../../Images/BlogContent/IMG (3).png");
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
     background-size: cover;
-    min-height: 50vw;
-    background-repeat: no-repeat;
-    padding-top: 1rem;
+    height: 55vh;
+  }
+  .Allparent img:nth-child(2) {
+    display: none;
   }
   
+  .Allparent img:nth-child(3) {
+    display: block;
+  }
+
+
   .parent {
-    width: 100%;
-    height: 70vh;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+    padding: 16% 0%;
+    margin-top: 3rem;
   }
-  .parent > div:nth-child(1) {
-    gap: 1rem;
-  }
-  .parent > div {
-    flex: 1;
-    color: white;
-    padding: 2rem 2rem;
-  }
-  .parent > div:nth-child(1) {
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: "center";
-    text-align: center;
-  }
-  .parent > div span {
-    font-family: "Poppins";
-    font-size: 32px;
-    font-weight: 700;
-    line-height: 45px;
-    letter-spacing: 0px;
-  }
-  
-  .parent > div:nth-child(1) > p {
-    margin: auto;
-    width: 60%;
-  }
-  
-  @media (max-width: 850px) {
-    .parent > div:nth-child(1) > p {
-      width: 90%;
-    }
-
-  }
-  
-  .parent > div:nth-child(1) > p:nth-child(1) {
-    font-family: "Poppins";
-    font-size: 10px;
-    font-weight: 400;
-    line-height: 20px;
-    letter-spacing: 0px;
-  }
-
-  
-  .parent > div:nth-child(1) > p:nth-child(3) {
-    font-family: "Poppins";
-    font-size: 10px;
-    font-weight: 400;
-    line-height: 27px;
-  }
-  .Allparent > div:nth-child(2) img {
-    position: absolute;
-    bottom: -2rem;
-    left: 0%;
-  }
-
-  @media (min-width:1400px) {
-    .Allparent > div:nth-child(2) img {
-      width: 100vw;
-    bottom: -3rem;
-    }
-
-    /* .Allparent {
-      padding: 6rem 0px;
-    } */
-
-  }
-  
-  @media (max-width: 950px) {
-    .parent > div {
-      padding: 2rem 0px;
-    }
-    .parent > div:nth-child(2) > img {
-      width: 100%;
-    }
-  
-    .parent > div:nth-child(1) > * {
-      padding-left: 2rem;
-    }
-    .parent > div:nth-child(1) > p:nth-child(2) {
-      font-size: 32px;
-      line-height: 50px;
-    }
-    .parent > div span {
-      font-size: 32px;
-      line-height: 50px;
-    }
-  }
-  @media (max-width: 800px) {
-    .parent > div:nth-child(1) > p:nth-child(2) {
-      font-size: 28px;
-      line-height: 45px;
-    }
-    .parent > div span {
-      font-size: 28px;
-      line-height: 45px;
-    }
-  }
-  
-  @media (max-width: 650px) {
-    .parent {
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 0%;
-      width: 100%;
-    }
-    .parent > div {
-      text-align: center !important;
-      padding: 1rem 0px;
-      margin: 0% !important;
-      flex: 0 ;
-    }
-    .parent > div:nth-child(1) > * {
-      padding-left: 0rem;
-    }
-  
-    .Allparent {
-      padding-top:4rem;
-    }
-    .parent > div:nth-child(1) {
-      padding: 2rem 0px;
-    }
-    .parent > div:nth-child(1) > p:nth-child(2) {
-      font-size: 24px;
-      line-height: 50px;
-    }
-    .parent > div span {
-      font-size: 24px;
-      line-height: 50px;
-    }
-    .Allparent > div:nth-child(2) img {
-      position: absolute;
-      bottom: -1rem;
-      left: 0%;
-    }
-  }
-  
-
-  
+}
