--- a/src/Styles/Navbar/Navbar.module.css
+++ b/src/Styles/Navbar/Navbar.module.css
@@ -18,15 +18,13 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  flex:2.4;
+  flex: 2.4;
   padding-left: 1.5rem;
 }
-.NavbarP > div:nth-child(1) > img{
+.NavbarP > div:nth-child(1) > img {
   width: 142px;
   height: 28px;
 }
-
-
 
 .NavbarP > div:nth-child(2) {
   display: flex;
@@ -108,7 +106,7 @@
   }
   .NavbarP > div:nth-child(3) {
     padding: 0px 2px;
-    flex: 2.5 ;
+    flex: 2.5;
     gap: 0.2rem;
   }
   .NavbarP p {
@@ -149,7 +147,6 @@
   }
   .NavbarP > div:nth-child(3) button {
     width: 127px !important;
-
   }
 }
 
@@ -244,86 +241,82 @@
 }
 
 /* Droper Configration */
-.droper {
-  position: relative;
-}
-
-.droper > div {
-  position: absolute;
-  top: 100%;
-  right: -50%;
-  border: 2px solid red;
-  z-index: 100;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-}
-.droper img {
-  width: 200px !important;
-  height: 200px !important;
-  position: absolute;
-  z-index: 2783672;
-}
-
-.droper p {
-  position: absolute;
-}
-
-.li1 {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 18px;
-
-  color: #333333;
-}
-.li2 {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 18px;
-
-  color: #333333;
-}
-
-.li1:hover {
-  background: linear-gradient(
-    178.18deg,
-    rgb(253, 116, 155) -13.56%,
-    rgb(40, 26, 200) 158.3%
-  );
-  color: #ffffff !important;
-}
-.li2:hover {
-  background: linear-gradient(
-    178.18deg,
-    rgb(253, 116, 155) -13.56%,
-    rgb(40, 26, 200) 158.3%
-  );
-  color: #ffffff !important;
-}
-.poc {
-  position: absolute;
-  right: -8rem;
-  top: 0rem;
-  display: none;
-}
-
 .sellbitcoin {
   position: relative;
 }
-.sellbitcoin:hover .poc {
-  display: block !important;
+
+/* DropDown */
+.dropD {
+  background-image: url("../../Images/Header/Combined Shape.svg");
+  background-size: 100%;
+  width: 142px;
+  height: 75px;
   display: flex;
   flex-direction: column;
-  margin-top: 1rem;
+  margin-top: 10rem;
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  align-items: flex-start;
+  z-index: 1000;
+  padding: 0.3rem 0px 1rem 0px;
 }
 
-@media (max-width: 1000px) {
-  .poc {
-    width: 20vw;
+@media (min-width: 1300px) {
+  .dropD {
+    top: -620%;
+    right: -74%;
   }
+}
+
+@media (max-width: 1300px) {
+  .dropD {
+    top: -273%;
+    right: -21%;
+  }
+  .dropD p {
+    text-align: left !important;
+  }
+}
+.dropD p:nth-child(1) {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  color: #333333;
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  padding: 0.5rem 0.5rem;
+  margin-top: 0.5rem;
+}
+.dropD p:nth-child(2) {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  color: #333333;
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  padding: 0.5rem 0.5rem;
+  margin-top: 0.2rem;
+  background-color: #ffffff;
+  border-radius: 0px 0px 5px 5px;
+  background: #ffffff;
+  border: 1px solid #e0e0e0;
+  border-radius: 5px;
+  border-top: none;
+}
+.dropD p:nth-child(1):hover {
+  color: #ffffff;
+  border-radius: 5px 5px 0px 0px;
+  background: linear-gradient(178.18deg, #fd749b -13.56%, #281ac8 158.3%);
+}
+.dropD p:nth-child(2):hover {
+  color: #ffffff;
+  border-radius: 0px 0px 5px 5px;
+  background: linear-gradient(178.18deg, #fd749b -13.56%, #281ac8 158.3%);
 }
